--- a/EFCoreLayerKit/EFCoreLayerKit.csproj
+++ b/EFCoreLayerKit/EFCoreLayerKit.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="AutoMapper" Version="15.0.1" />
     <PackageReference Include="FormatLog" Version="1.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.7" />
   </ItemGroup>
 
 </Project>
