--- a/EFCoreLayerKit/EFCoreLayerKit.csproj
+++ b/EFCoreLayerKit/EFCoreLayerKit.csproj
@@ -4,6 +4,16 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>EFCoreLayerKit</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>Wood</Authors>
+		<Description>基于 Entity Framework Core 的通用数据访问层工具包，支持自动仓储注册、DTO 映射、软删除、自动迁移等，适用于 .NET 8+ 项目。</Description>
+		<PackageTags>logging;EFCore;sqlite;structured-log</PackageTags>
+		<RepositoryUrl>https://github.com/jau-huei/EFCoreLayerKit</RepositoryUrl>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageReadmeFile>README.en.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -27,5 +37,6 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
 		<None Include="..\README.md" Pack="true" PackagePath="" />
+		<None Include="..\README.en.md" Pack="true" PackagePath="" />
 	</ItemGroup>
 </Project>
